--- a/css/main.css
+++ b/css/main.css
@@ -183,6 +183,14 @@ header nav ul.links li:hover ul{
   } 
 }
 /* End header*/
+/* 
+.landing{
+  background-image: url(../images/landing.mp4);
+  background-size: cover;
+  background-position: center center;
+}
+ */
+
 /* Start features */
 .info{
   background-color: var(--second-color);
@@ -460,8 +468,9 @@ footer .container .social a{
   transition: var(--main-transition);
 }
 footer .container .social a:hover{
-  transform: translateY(-10px);
+  transform: translateY(-5px);
 }
+footer .copyright>.container .mysocial a.face:hover,
 footer .container .social a.face:hover{
   background-color: #1094f4;
 }
@@ -483,7 +492,50 @@ footer .container .social a i.twet{
 footer .container .social a:hover i{
   color:white ;
 }
-/* End Footer */
+
+/* Start copyright */
+footer .copyright{
+  padding: 10px 0;
+  background-color: black;
+}
+footer .copyright .container{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+footer .copyright .container .text{
+  font-size: 15px;
+  font-weight: bold;
+  color:#ffffff;
+}
+footer .copyright .container .heart{
+  color: green;
+}
+footer .copyright>.container .mysocial{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+footer .copyright>.container .mysocial a{
+  padding: 3px;
+  background-color: #2e2e2e;
+  margin-right: 10px;
+  transition: var(--main-transition);
+}
+footer .copyright>.container .mysocial a i{
+  color: #6f6f6f;
+  transition: var(--main-transition);
+}
+footer .copyright>.container .mysocial a:hover i{
+  color: white;
+}
+footer .copyright>.container .mysocial a.git:hover{
+  background-color:#ff9933;
+}
+footer .copyright>.container .mysocial a.whats:hover{
+  background-color: #56f074;
+}
+/* End Footer 
 
 
 
