--- a/css/main.css
+++ b/css/main.css
@@ -183,14 +183,6 @@ header nav ul.links li:hover ul{
   } 
 }
 /* End header*/
-/* 
-.landing{
-  background-image: url(../images/landing.mp4);
-  background-size: cover;
-  background-position: center center;
-}
- */
-
 /* Start features */
 .info{
   background-color: var(--second-color);
@@ -534,6 +526,14 @@ footer .copyright>.container .mysocial a.git:hover{
 }
 footer .copyright>.container .mysocial a.whats:hover{
   background-color: #56f074;
+}
+@media(max-width:767px){
+  footer .copyright .container {
+    flex-direction: column-reverse;
+  }
+  footer .copyright>.container .mysocial{
+    margin: 10px 0 5px;
+  }
 }
 /* End Footer 
 
